syntax = "proto3";

package network;

service NodeService {
  rpc RegisterNode (RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc GetNodeList (GetNodeListRequest) returns (GetNodeListResponse);
  rpc SendData (SendDataRequest) returns (SendDataResponse);
}

message RegisterNodeRequest {
  string id = 1;
  string address = 2;
  int32 port = 3;
}
message RegisterNodeResponse {
  bool success = 1;
}
message GetNodeListRequest {}

message GetNodeListResponse {
  repeated NodeInfo nodes = 1;
}

message SendDataRequest {
  string targetNodeId = 1;
  bytes data = 2;
}

message SendDataResponse {
  bool success = 1;
}

message NodeInfo {
  string id = 1;
  string address = 2;
  int32 port = 3;
}
